k8two/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    appName: yolobackend
    serverClass: backend
spec:
  selector:
    matchLabels:
      app: backendapp
      tier: backend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: backendapp
        tier: backend
        track: stable
    spec:
      containers:
        - name: backendapp
          image: isaboke/yolofrontend:v1.0.0
          resources:
            limits:
              cpu: "1"
              memory: "512Mi"
            requests:
              cpu: "0.5"
              memory: "256Mi"
          ports:
            - name: http
              containerPort: 5000
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: server-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: backendservice
spec:
  type: LoadBalancer
  selector:
    app: backendapp
    tier: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
