k8two/frontend.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    appName: yolo
    serverClass: client
    memoryOptimised: "yes"
    component: frontend
  annotations:
    description: "Deployment for frontend application"
spec:
  replicas: 1
  selector:
    matchLabels:
      appName: yolo
      memoryOptimised: "yes"
      app: yoloclient
      component: frontend
  template:
    metadata:
      labels:
        appName: yolo
        memoryOptimised: "yes"
        app: yoloclient
        component: frontend
    spec:
      containers:
        - name: client
          image: isaboke/yolofrontend:v1.0.0
          resources:
            limits:
              cpu: "0.4"
              memory: "512Mi"
            requests:
              cpu: "0.2"
              memory: "256Mi"
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontendservice
  labels:
    app: yoloclient
    component: frontend
  annotations:
    description: "Service for frontend application"
spec:
  type: LoadBalancer
  selector:
    app: yoloclient
    component: frontend
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
