k8two/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: test
spec:
  rules:
    - host: yolomy.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: frontendservice
                port:
                  number: 80
